--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -5,10 +5,11 @@
 body {
     font-family: 'Ubuntu Mono', monospace;
     font-weight: 400;
+    font-size: 20px;
     height: 100vh;
-    background-color: black;
-    color: rgb(7, 255, 7);
-    text-shadow: 0 0 10px lime;
+    background-color: #001f3f;
+    color: #7FDBFF;
+    text-shadow: 0 0 10px #94dcf8;
 }
 
 a, u {
@@ -18,6 +19,5 @@ a, u {
 
 .container {
     max-width: 1000px;
-    height: 100vh;
     margin: 0 auto;
 }
