feat: update styles and auth styles

--- a/Client/src/components/layout/Header/HeaderStyle.css
+++ b/Client/src/components/layout/Header/HeaderStyle.css
@@ -1,12 +1,15 @@
 header {
     border-bottom: 1.5px solid;
     border-color: inherit;
-    margin-top: 10px;
+}
+
+.header__link:hover {
+    color: white;
+    text-shadow: 0 0 10px white;
 }
 
 .nav {
     height: 50px;
-    width: 100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
