--- a/Client/src/components/layout/Header/HeaderStyle.css
+++ b/Client/src/components/layout/Header/HeaderStyle.css
@@ -1,6 +1,5 @@
 header {
-    border-bottom: 1.5px solid;
-    border-color: inherit;
+    padding-top: 10px;
 }
 
 .header__link:hover {
@@ -14,10 +13,9 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
-    border-left: 1.5px solid;
-    border-right: 1.5px solid;
+    border: 1.5px solid;
     border-color: inherit;
-    margin-bottom: 10px;
+    border-radius: 5px;
 }
 
 .signIn {
