--- a/Client/src/pages/WriteArticle/WriteArticle.css
+++ b/Client/src/pages/WriteArticle/WriteArticle.css
@@ -1,17 +1,24 @@
 .article {
     width: 100%;
-    /* height: 70%; */
 }
 
 .article__title {
-    /* display: block; */
     text-align: center;
     padding: 20px 0;
 }
 
+.article__input {
+    width: 800px;
+    text-align: center;
+}
+
+.article__input::placeholder {
+    color: rgb(183, 183, 183);
+}
+
 .article__textarea {
-    width: 100vh;
-    /* height: 70%; */
+    width: 815px;
+    height: 650px;
     font-size: 30px;
 
     border: 1px solid white;
@@ -20,8 +27,18 @@
     color: white;
 }
 
+.article__content-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .article__button {
     display: flex;
     justify-content: center;
-    /* margin-top: 50px; */
+    margin-top: 30px;
+}
+
+Button {
+    margin: 10px;
 }
