--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,30 +1,46 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap');
 
-
 body {
-    font-family: 'Ubuntu Mono', monospace;
-    font-weight: 400;
-    font-size: 20px;
-    height: 100vh;
-    background-color: #001f3f;
-    color: #7FDBFF;
-    text-shadow: 0 0 10px #94dcf8;
-    margin: 0;
-    padding: 0;
+	font-family: 'Ubuntu Mono', monospace;
+	font-weight: 400;
+	font-size: 20px;
+	height: 100vh;
+	background-color: #001f3f;
+	color: #7fdbff;
+	text-shadow: 0 0 10px #94dcf8;
+	margin: 0;
+	padding: 0;
 }
 
-a, u {
-    text-decoration: none;
-    color: inherit;
+a,
+u {
+	text-decoration: none;
+	color: inherit;
 }
 
 h1 {
-    margin: 0;
+	margin: 0;
+}
+
+button {
+	background-color: inherit;
+	color: inherit;
+	border-radius: 8px;
+	border-color: inherit;
+	padding: 10px 20px;
+}
+
+button:active {
+	border-color: white;
+	color: white;
+}
+
+button:hover {
+	cursor: pointer;
 }
 
 .container {
-    max-width: 1000px;
-    height: 100vh;
-    margin: 0 auto;
+	max-width: 1000px;
+	height: 100vh;
+	margin: 0 auto;
 }
