--- a/Client/src/pages/ListArticles.tsx/ListArticles.css
+++ b/Client/src/pages/ListArticles.tsx/ListArticles.css
@@ -15,7 +15,7 @@
     border: 1.5px solid white;
     border-radius: 10px;
     padding: 5px;
-    margin: 20px;
+    margin: 20px 0;
 }
 
 .listarticle__content-title {
