--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -43,5 +43,7 @@ button:hover {
 	max-width: 1000px;
 	height: 100vh;
 	margin: 0 auto;
-	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
