--- a/Client/src/pages/ListArticles.tsx/ListArticles.css
+++ b/Client/src/pages/ListArticles.tsx/ListArticles.css
@@ -29,9 +29,6 @@
 .listarticle__pagination-button {
     display: flex;
     justify-content: center;
-}
-
-.listarticle__pagination-button {
     padding-bottom: 20px;
 }
 
@@ -39,6 +36,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin: 0 10px;
 }
 
 .pagination__button-icon {
