--- a/Client/src/pages/WriteArticle/WriteArticle.css
+++ b/Client/src/pages/WriteArticle/WriteArticle.css
@@ -38,11 +38,7 @@
 .article__button {
 	display: flex;
 	justify-content: center;
-	margin-top: 30px;
-}
-
-Button {
-	margin: 10px;
+	margin: 30px 0;
 }
 
 .article__content-input::placeholder{
@@ -53,7 +49,7 @@ Button {
 
 .article__content-input {
 	all: unset;
-	padding: 20px;
+	padding: 20px 0;
 	font-size: 35px;
 	z-index: 3;
 }
@@ -70,7 +66,7 @@ Button {
 	overflow-wrap: break-word;
 	min-width: 100%;
 	font-size: 35px;
-	padding: 20px;
+	padding: 20px 0;
 	position: relative;
 }
 
