fix: content not display correctly

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -30,13 +30,10 @@ button, .input__button {
 	padding: 10px 20px;
 }
 
-button:active {
-	border-color: white;
-	color: white;
-}
-
 button:hover {
 	cursor: pointer;
+	color: white;
+	border-color: rgb(167, 167, 167);
 }
 
 .container {
@@ -46,4 +43,9 @@ button:hover {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+}
+
+.title {
+	text-align: center;
+	padding: 20px 0;
 }
