--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -38,7 +38,7 @@ button:hover {
 
 .container {
 	max-width: 1000px;
-	height: 100vh;
+	height: 100%;
 	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
