--- a/Client/src/pages/ListArticles.tsx/ListArticles.css
+++ b/Client/src/pages/ListArticles.tsx/ListArticles.css
@@ -33,6 +33,12 @@
     padding-bottom: 20px;
 }
 
+.listarticle__pagination-currentpage {
+    border: solid 2px white;
+    border-radius: 8px;
+    padding: 10px 20px;
+}
+
 .pagination__button-item {
     display: flex;
     flex-direction: row;
